--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ Temporary Items
 .apdisk
 /spring-jpa-data/nbproject/private/
 /spring-jpa-data/target/
+/Bookmark/nbproject/private/
+/Bookmark/nbproject/
